--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "dev-server": "json-server -p 8000 db.json"
+  },
+  "devDependencies": {
+    "eslint": "^4.18.2",
+    "eslint-plugin-react": "^7.7.0"
   }
 }
